# anki_wiktionary

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.python  README.md  anki.py  anki_notes.txt  cli.py  docker-compose.testing.yml  docker-compose.yml  flake.nix  model.py  pyproject.toml  pytest.ini  result  shell.nix
.github/workflows/: codespell.yml  main.yml
app/: __init__.py  anki.py  anki_connector.py  anki_template.py  ankiweb.py  cards_handler.py  connector.py  constants.py  data_processor.py  db.py  ipa_handler.py  main.py  models_handler.py  private_config.py  serializers.py  server.py  telegram_bot.py
app/anki_connector/: anki_local_connector.py  anki_web_connector.py
app/anki_connectors/: __init__.py  anki_local_connector.py  anki_web_connector.py  anki_web_py_connector.py  errors.py
app/anki_connectors/tests/: conftest.py  test_anki_local_connector.py  test_anki_web_connector.py
app/anki_connectors/tests/cassettes/: test_add_custom_note.yaml  test_add_custom_note_with_failed_connection.yaml  test_get_available_decks.yaml  test_get_cards_from_deck[Default].yaml  test_get_models_and_ids.yaml  test_send_card_success.yaml  test_start.yaml
app/audio/: __init__.py  handler.py
app/audio/tests/: conftest.py  test_handler.py
app/audio/tests/cassettes/: test_generate_audio.yaml
app/data_processor/: __init__.py  duden_data_processor.py  note_data_processor.py  ollama_data_processor.py  verben_data_processor.py  wiktionary_data_processor.py
app/data_processors/: __init__.py  duden_data_processor.py  note_data_processor.py  processor.py  verben_data_processor.py  wiktionary_data_processor.py
app/data_processors/processors/: __init__.py  base_data_processor.py  duden_data_processor.py  dwds_data_processor.py  gemini_data_processor.py  ollama_data_processor.py  verben_data_processor.py  wiktionary_data_processor.py
app/data_processors/tests/: test_data_processor.py
app/deck_generator/: __init__.py  cleanup.py  generator.py  helpers.py  main.py  markdown_to_json.py  models.py  updater.py
app/deck_generator/tests/: conftest.py  test_cleanup.py  test_generator.py  test_updater.py
app/handlers/: __init__.py  anki_handler.py  errors.py
app/handlers/tests/: conftest.py  test_anki_handlers.py
app/helpers/: __init__.py  flatten_and_stringify.py  to_valid_filename.py  vcr_body_helpers.py
app/helpers/tests/: test_flatten_and_stringify.py
app/html_processors/: __init__.py  clean_text.py  html_tags_prune.py  html_to_text.py
app/html_processors/tests/: test_html_tags_prune.py  test_html_to_text.py
app/parser/: models.py  parser.py
app/parser/new_parser/: parser_examples.py  parser_meaning.py
app/parsers/: __init__.py  duden_parser.py  dwds_parser.py  models.py  verben_parser.py  wiktionary_parser.py
app/parsers/tests/: test_duden_parser.py  test_verben_parser.py
app/parsers/wiktionary/: parser_examples.py  parser_meaning.py
app/serializers/: __init__.py  serializers.py
app/serializers/tests/: conftest.py  test_serializers.py
app/telegram_bot/: __init__.py  handlers.py  main.py  telegram_bot.py
app/telegram_bot/tests/: conftest.py  test_handlers.py
app/tests/: conftest.py  test_connector.py  test_data_processor.py  test_main.py  test_serializers.py
app/tests/cassettes/: test_add_audio_local.yaml  test_add_note.yaml  test_add_note_allow_duplicated.yaml  test_generate_audio.yaml  test_generate_notes.yaml  test_generate_notes_is_successful.yaml  test_generate_sentence_examples.yaml  test_get_anki_note.yaml  test_get_anki_note_data_is_successful.yaml  test_get_cards_from_deck[Mein Deutsch].yaml  test_get_cards_from_deck[Test].yaml  test_get_data_from_duden.yaml  test_get_data_from_duden[Abend].yaml  test_get_data_from_duden[Bammel].yaml  test_get_data_from_duden[locker].yaml  test_get_data_from_duden[selbstverteidigung].yaml  test_get_wiktionary_data.yaml  test_send_card_using_anki_web.yaml
app/tests/snapshots/: connector__anki_connector_add_note__0.json  connector__get_available_decks__0.json  data_processor__generate_content_from_scratch_prompt__0.json  data_processor__get_anki_note__0.json  data_processor__get_data_from_duden_Bammel__Bammel.json  data_processor__get_data_from_duden__0.json  data_processor__get_data_from_duden_locker__locker.json  data_processor__get_data_from_duden_selbstverteidigung__selbstverteidigung.json  data_processor__get_data_from_verben__0.json  data_processor__get_wiktionary_data__Abend_0.json  data_processor__get_wiktionary_data__Abend_1.json  data_processor__get_wiktionary_data__Abend_2.json  data_processor__ollama_processor_get_anki_note__0.json  main__get_anki_note_data__0.json  main__send_card_using_anki_web_ollama__0.json  main__send_card_using_anki_web_verben__0.json  main__send_card_using_anki_web_wiktionary__0.json
templates/: back_card.html  front_card.html  styling.css
typings/wiktionary_de_parser/: __init__.pyi  models.pyi
typings/wiktionary_de_parser/parser/: __init__.pyi
(+88 files in other folders)
