[tool.poetry]
name = "anki_wiktionary"
version = "0.1.0"
description = ""
authors = ["npujol <naivy.luna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slob = {git = "https://github.com/itkach/slob.git"}
peewee = "^3.14.0"
beautifulsoup4 = "^4.9.3"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
