[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["npujol <naivy.luna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"
pydantic = "*"
wiktionary-de-parser = "^0.11.5"
python-telegram-bot = { extras = ["rate-limiter"], version = "^21.1.1" }
environs = "^11.0.0"
deep-translator = "*"
gtts = "*"
selenium = "*"
pyvirtualdisplay = "*"
ollama = "^0.2.0"
duden = "*"
genanki = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pdbpp = "*"
black = "*"
ruff = "*"
isort = "*"
pytest-insta = "*"
pytest-vcr = "*"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | tests/fixtures
)/
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
lint.exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
extend-select = ["I"]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.poetry.scripts]
bot = 'app.telegram_bot.main:main'
